--- a/become-a-host/amenities.html
+++ b/become-a-host/amenities.html
@@ -13259,7 +13259,7 @@
            <header class="_1c8aprq">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
-             <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+             <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
               <div class="_1q9sh65">
                <div class="_ce5b56"><span class="_1v1onhz">Myrna</span><span class="_1fq9ae3">Response time: 1 hour</span></div>
               </div>
@@ -13468,7 +13468,7 @@
            <header class="_1youxq0">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
-             <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+             <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
               <div class="_1q9sh65">
                <div class="_ce5b56"><span class="_1v1onhz">Myrna</span><span class="_1fq9ae3">Response time: 1 hour</span></div>
               </div>
@@ -13711,7 +13711,7 @@
            <header class="_1c8aprq">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
-             <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><div class="_1q9sh65">Are you sure you want to exit?</div></h1>
+             <h1 tabindex="-1" class="heading" elementtiming="LCP-target"><div class="_1q9sh65">Are you sure you want to exit?</div></h1>
             </div>
             <div class="_rrmdgl"></div>
            </header>
