--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -1396,7 +1396,7 @@
            <header class="_1c8aprq">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
-             <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+             <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
               <div class="_1q9sh65">
                <div class="_ce5b56"><span class="_1v1onhz">Myrna</span><span class="_1fq9ae3">Response time: 1 hour</span></div>
               </div>
@@ -1604,7 +1604,7 @@
            <header class="_1youxq0">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
-             <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+             <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
               <div class="_1q9sh65">
                <div class="_ce5b56"><span class="_1v1onhz">Myrna</span><span class="_1fq9ae3">Response time: 1 hour</span></div>
               </div>
@@ -1847,7 +1847,7 @@
            <header class="_y74zq">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
-             <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+             <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
               <div class="_1q9sh65"><span class="_13lde72">Help</span></div>
              </h1>
             </div>
@@ -1856,7 +1856,7 @@
            <div class="_1wg7rw">
             <div class="_4y54ze" style="animation-delay: 250ms;">
              <section>
-              <div class="_kedp3u"><h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Ask a Superhost</h2></div>
+              <div class="_kedp3u"><h2 tabindex="-1" class="heading" elementtiming="LCP-target">Ask a Superhost</h2></div>
               <div class="_lvhhqo">
                <button type="button" class="_15ut2yit">
                 <span class="_jr600v">
@@ -1886,7 +1886,7 @@
             </div>
             <div class="_4y54ze" style="animation-delay: 400ms;">
              <section>
-              <div class="_kedp3u"><h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Read our best tips</h2></div>
+              <div class="_kedp3u"><h2 tabindex="-1" class="heading" elementtiming="LCP-target">Read our best tips</h2></div>
               <div class="_lvhhqo">
                <a rel="noopener noreferrer" target="_blank" href="https://www.airbnb.com/resources/hosting-homes/a/how-to-define-what-kind-of-space-youre-hosting-361" class="_tx7p69r">
                 <div class="_v0gz4uz" style="--dls-liteimage-padding-top: 55.9633%;">
@@ -1950,7 +1950,7 @@
            <header class="_1c8aprq">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
-             <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><div class="_1q9sh65">Are you sure you want to exit?</div></h1>
+             <h1 tabindex="-1" class="heading" elementtiming="LCP-target"><div class="_1q9sh65">Are you sure you want to exit?</div></h1>
             </div>
             <div class="_rrmdgl"></div>
            </header>
