--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3400,7 +3400,7 @@
          <header class="_1youxq0">
           <div class="_1tng6ym"></div>
           <div class="_9t7ktw">
-           <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><div class="_1q9sh65">Edit photo</div></h1>
+           <h1 tabindex="-1" class="heading" elementtiming="LCP-target"><div class="_1q9sh65">Edit photo</div></h1>
           </div>
           <div class="_rrmdgl"></div>
          </header>
@@ -3551,7 +3551,7 @@
              <div class="_12kfhdn">
               <div class="_1ijzsyb">
                <section>
-                <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><span class="_18dtjc8n">Add additional photos to your gallery</span></h2>
+                <h2 tabindex="-1" class="heading" elementtiming="LCP-target"><span class="_18dtjc8n">Add additional photos to your gallery</span></h2>
                 <div class="_ckudf4">
                  <span class="ll4r2nl dir dir-ltr">
                   Your photos will be reviewed to ensure that they meet our <span class="_11waoz2"><a href="https://www.airbnb.com/resources/hosting-experiences/a/photo-requirements-for-experiences-386" target="_blank">standards</a></span>.
@@ -4304,7 +4304,7 @@
              <div class="_12kfhdn">
               <div class="_1ijzsyb">
                <section>
-                <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><span class="_18dtjc8n">Your photo library</span></h2>
+                <h2 tabindex="-1" class="heading" elementtiming="LCP-target"><span class="_18dtjc8n">Your photo library</span></h2>
                 <div class="_ckudf4">
                  <span class="ll4r2nl dir dir-ltr">
                   Manage all of your photos in one place.
