--- a/edit/what.html
+++ b/edit/what.html
@@ -1672,7 +1672,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
             <header class="_q8mwh4">
              <div class="_1jqox1a"></div>
              <div class="_1s09xaf">
-              <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+              <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                <div class="_1q9sh65">
                 <div style="--gp-section-max-width: 1120px;">
                  <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_MODAL_HEADER" data-section-id="CONCEPT_REFINEMENT_0_MODAL_HEADER">
@@ -4003,7 +4003,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
             <header class="_q8mwh4">
              <div class="_1jqox1a"></div>
              <div class="_1s09xaf">
-              <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+              <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                <div class="_1q9sh65">
                 <div style="--gp-section-max-width: 1120px;">
                  <div data-plugin-in-point-id="EXAMPLES_MODAL_HEADER" data-section-id="EXAMPLES_MODAL_HEADER">
