--- a/listings-product/gift.html
+++ b/listings-product/gift.html
@@ -396,7 +396,7 @@
                                   <div class="cgn54y8 dir dir-ltr">
                                     <div>
                                       <div class="t1y42d9y sx9s60z dir dir-ltr">
-                                        <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Frequently asked&nbsp;questions</h2>
+                                        <h2 tabindex="-1" class="heading" elementtiming="LCP-target">Frequently asked&nbsp;questions</h2>
                                       </div>
                                       <div class="s3tiguw s1ptxv9j dir dir-ltr">For other questions visit our <a
                                           href="/help/article/981/how-do-airbnb-gift-cards-work" class="_1sikdxcl">help center</a></div>
