--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1552,7 +1552,7 @@
         <section>
           <div class="htfbthk dir dir-ltr">
             <div class="tzj1727 dir dir-ltr">
-              <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+              <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
                 Airbnb Online Experiences
               </h2>
             </div>
@@ -1584,7 +1584,7 @@
                     <div>
                       <h3
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading"
                         elementtiming="LCP-target"
                       >
                         Thoughtful hosts
@@ -1623,7 +1623,7 @@
                     <div>
                       <h3
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading"
                         elementtiming="LCP-target"
                       >
                         Small group activities
@@ -1662,7 +1662,7 @@
                     <div>
                       <h3
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading"
                         elementtiming="LCP-target"
                       >
                         Simple and global
@@ -2450,7 +2450,7 @@
               <h2
                 id="availability-title"
                 tabindex="-1"
-                class="_14i3z6h"
+                class="heading"
                 elementtiming="LCP-target"
               >
                 <div class="_1muy8yf" aria-hidden="false">
@@ -6435,7 +6435,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                     <div data-plugin-in-point-id="BOOK_IT_SIDEBAR" data-section-id="BOOK_IT_SIDEBAR">                                                      
                                                       <section>
                                                         <div>
-                                                          <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><span class="_aryd7a">From ₱1,460</span><span
+                                                          <h2 tabindex="-1" class="heading" elementtiming="LCP-target"><span class="_aryd7a">From ₱1,460</span><span
                                                               class="_1khgwh5">/ person</span></h2>
                                                           <div><span class="c1fa4tqf dir dir-ltr">
                                                               <div class="_10d7v0r"><button type="button" class="_5d4yvqe">Show all prices</button></div>
@@ -6733,7 +6733,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <header class="_1youxq0">
                                                         <div class="_1tng6ym"></div>
                                                         <div class="_9t7ktw">
-                                                          <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                          <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                             <div class="_1q9sh65">Log in or sign up</div>
                                                           </h1>
                                                         </div>
@@ -7186,7 +7186,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                               <section>
                                                 <div class="htfbthk dir dir-ltr">
                                                   <div class="tzj1727 dir dir-ltr">
-                                                    <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Airbnb Online Experiences</h2>
+                                                    <h2 tabindex="-1" class="heading" elementtiming="LCP-target">Airbnb Online Experiences</h2>
                                                   </div>
                                                 </div>
                                                 <div class="i3aub6y dir dir-ltr">
@@ -7201,7 +7201,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <div>
                                                         <div class="t1wyklzj dir dir-ltr">
                                                           <div>
-                                                            <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Thoughtful hosts</h3>
+                                                            <h3 tabindex="-1" class="heading" elementtiming="LCP-target">Thoughtful hosts</h3>
                                                           </div>
                                                         </div>
                                                         <div class="sjs6qem dir dir-ltr">Get to know hosts who share their expertise and a window to
@@ -7220,7 +7220,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <div>
                                                         <div class="t1wyklzj dir dir-ltr">
                                                           <div>
-                                                            <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Small group activities</h3>
+                                                            <h3 tabindex="-1" class="heading" elementtiming="LCP-target">Small group activities</h3>
                                                           </div>
                                                         </div>
                                                         <div class="sjs6qem dir dir-ltr">Meet people from all over the world while learning something
@@ -7239,7 +7239,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <div>
                                                         <div class="t1wyklzj dir dir-ltr">
                                                           <div>
-                                                            <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Simple and global</h3>
+                                                            <h3 tabindex="-1" class="heading" elementtiming="LCP-target">Simple and global</h3>
                                                           </div>
                                                         </div>
                                                         <div class="sjs6qem dir dir-ltr">Join easily and participate from home without a lot of&nbsp;prep.
@@ -8881,7 +8881,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                   <div class="_1iqo52n">
                     <div>
                       <div class="_y1t12s">
-                        <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Guest requirements</h3>
+                        <h3 tabindex="-1" class="heading" elementtiming="LCP-target">Guest requirements</h3>
                       </div>
                       <div class="_vv829m">
                         <div aria-hidden="true" class="_g8c6h5"><svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"
@@ -8913,7 +8913,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                   <div class="_1iqo52n">
                     <div>
                       <div class="_y1t12s">
-                        <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Cancellation policy</h3>
+                        <h3 tabindex="-1" class="heading" elementtiming="LCP-target">Cancellation policy</h3>
                       </div>
                       <div class="_1lcxkbl"><span class="ll4r2nl dir dir-ltr">Cancel up to 7 days before the Experience
                           start time for a full refund, or within 24 hours of booking as long as the booking is made
@@ -10993,7 +10993,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                   <div class="_v9mh2x0">
                                                     <div class="_14batbi">
                                                       <div class="_152qbzi">
-                                                        <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                        <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                           <div class="_1s3yw56">Select dates</div>
                                                         </h3>
                                                       </div>
@@ -11016,7 +11016,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                         </div>
                                                       </div>
                                                       <div class="_1alg10r1">
-                                                        <h4 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                        <h4 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                           <div class="_1ugx8c">Sun, Nov 6</div>
                                                         </h4>
                                                         <div>
@@ -11131,7 +11131,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                  
                                                   <div class="_1alg10r">
                                                     <div>
-                                                      <h4 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><div class="_1ugx8c">Sun, Nov 6</div></h4>
+                                                      <h4 tabindex="-1" class="heading" elementtiming="LCP-target"><div class="_1ugx8c">Sun, Nov 6</div></h4>
                                                       <div>
                                                         <div class="_12ifn8">
                                                           <div class="_v4721jw">
