--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -16578,7 +16578,7 @@
                                               <div class="_ytfarf" data-visible="true" style="padding: 0px 13px;">
                                                 <div class="_t720qti">
                                                   <div>
-                                                    <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                    <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                       October 2022</h3>
                                                   </div>
                                                 </div>
@@ -16864,7 +16864,7 @@
                                               <div class="_ytfarf" data-visible="true" style="padding: 0px 13px;">
                                                 <div class="_t720qti">
                                                   <div>
-                                                    <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                    <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                       November 2022</h3>
                                                   </div>
                                                 </div>
@@ -17134,7 +17134,7 @@
                                               <div class="_ytfarf" data-visible="true" style="padding: 0px 13px;">
                                                 <div class="_t720qti">
                                                   <div>
-                                                    <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                    <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                       December 2022</h3>
                                                   </div>
                                                 </div>
@@ -17411,7 +17411,7 @@
                                               <div class="_ytfarf" data-visible="true" style="padding: 0px 13px;">
                                                 <div class="_t720qti">
                                                   <div>
-                                                    <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                    <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                       January 2023</h3>
                                                   </div>
                                                 </div>
