--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -19784,12 +19784,12 @@
                           ">
                         <section>
                           <div class="_1kb5zmd">
-                            <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Amenities</h2>
+                            <h2 tabindex="-1" class="heading" elementtiming="LCP-target">Amenities</h2>
                           </div>
                           <div style="margin-bottom: 60px !important;">
                             <div class="_aujnou">
                               <div class="_7blh7hl">
-                                <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Special to this farm stay
+                                <h3 tabindex="-1" class="heading" elementtiming="LCP-target">Special to this farm stay
                                 </h3>
                               </div>
                               <div class="_1wadwfl"></div>
@@ -20357,7 +20357,7 @@
                             </div>
                             <div class="_aujnou">
                               <div class="_7blh7hl">
-                                <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Everything you need</h3>
+                                <h3 tabindex="-1" class="heading" elementtiming="LCP-target">Everything you need</h3>
                               </div>
                               <div class="_1wadwfl"></div>
                               <div>
