--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -11424,7 +11424,7 @@
                                                                                           <div class="_ihvjx2">
                                                                                             <div>
                                                                                               <h3 tabindex="-1"
-                                                                                                class="_14i3z6h"
+                                                                                                class="heading"
                                                                                                 elementtiming="LCP-target">
                                                                                                 September 2022</h3>
                                                                                             </div>
@@ -11849,7 +11849,7 @@
                                                                                           <div class="_ihvjx2">
                                                                                             <div>
                                                                                               <h3 tabindex="-1"
-                                                                                                class="_14i3z6h"
+                                                                                                class="heading"
                                                                                                 elementtiming="LCP-target">
                                                                                                 October 2022</h3>
                                                                                             </div>
@@ -12295,7 +12295,7 @@
                                                                                           <div class="_ihvjx2">
                                                                                             <div>
                                                                                               <h3 tabindex="-1"
-                                                                                                class="_14i3z6h"
+                                                                                                class="heading"
                                                                                                 elementtiming="LCP-target">
                                                                                                 November 2022</h3>
                                                                                             </div>
@@ -12720,7 +12720,7 @@
                                                                                           <div class="_ihvjx2">
                                                                                             <div>
                                                                                               <h3 tabindex="-1"
-                                                                                                class="_14i3z6h"
+                                                                                                class="heading"
                                                                                                 elementtiming="LCP-target">
                                                                                                 December 2022</h3>
                                                                                             </div>
@@ -27536,7 +27536,7 @@
                         </div>
                         <div class="tve6z7n dir dir-ltr">
                           <section>
-                            <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                            <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
                               <div class="t1w965rm dir dir-ltr">Service animals</div>
                             </h2>
                           </section><span class="ll4r2nl dir dir-ltr">Service animals aren’t pets, so there’s no need to
@@ -27588,13 +27588,13 @@
                 <div class="_1xi5pac">
                   <div class="_134cgdm">
                     <section>
-                      <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                      <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
                         <div class="_1kxrvd6">Where you’ll be</div>
                       </h2>
                       <div class="_50mnu4">
                         <div>
                           <div class="_9ns6hl">
-                            <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                            <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
                               Malay, Western Visayas, Philippines
                             </h3>
                           </div>
@@ -27639,7 +27639,7 @@
                       <div class="_50mnu4">
                         <div>
                           <div class="_9ns6hl">
-                            <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                            <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
                               Getting around
                             </h3>
                           </div>
@@ -27701,7 +27701,7 @@
               <div class="_1lplc7"></div>
               <div class="_1jza0fl">
                 <section class="" style="margin-top: 3%">
-                  <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                  <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
                     <div class="_1mo6nsk" data-testid="user-flag-title">
                       Why are you reporting this listing?
                     </div>
@@ -27848,7 +27848,7 @@
               <div class="_1lplc7"></div>
               <div class="_1jza0fl">
                 <section class="" style="margin-top: 3%">
-                  <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                  <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
                     <div class="_1mo6nsk" data-testid="user-flag-title">
                       We got your report
                     </div>
@@ -27965,7 +27965,7 @@
                                                 <div class="_ytfarf" data-visible="true" style="padding: 0px 13px;">
                                                   <div class="_t720qti">
                                                     <div>
-                                                      <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                      <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                         October 2022</h3>
                                                     </div>
                                                   </div>
@@ -28282,7 +28282,7 @@
                                                 <div class="_ytfarf" data-visible="true" style="padding: 0px 13px;">
                                                   <div class="_t720qti">
                                                     <div>
-                                                      <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                      <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                         November 2022</h3>
                                                     </div>
                                                   </div>
@@ -28579,7 +28579,7 @@
                                                 <div class="_ytfarf" data-visible="true" style="padding: 0px 13px;">
                                                   <div class="_t720qti">
                                                     <div>
-                                                      <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                      <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                         December 2022</h3>
                                                     </div>
                                                   </div>
@@ -28887,7 +28887,7 @@
                                                 <div class="_ytfarf" data-visible="true" style="padding: 0px 13px;">
                                                   <div class="_t720qti">
                                                     <div>
-                                                      <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                      <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                         January 2023</h3>
                                                     </div>
                                                   </div>
@@ -29285,7 +29285,7 @@
               <header class="_1c8aprq">
                 <div class="_1tng6ym"></div>
                 <div class="_9t7ktw">
-                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                  <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                     <div class="_1q9sh65">Base Price Breakdown</div>
                   </h1>
                 </div>
