--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -6858,7 +6858,7 @@
                             <div class="t16kra9o dir dir-ltr">
                               <div aria-live="polite" aria-atomic="true">
                               <section>
-                                <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><span class="to8eev7 dir dir-ltr">Over 1,000 homes within map area</span></h1>
+                                <h1 tabindex="-1" class="heading" elementtiming="LCP-target"><span class="to8eev7 dir dir-ltr">Over 1,000 homes within map area</span></h1>
                               </section>
                               </div>
                             </div>
