--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6636,7 +6636,7 @@
                       <header class="_1youxq0">
                         <div class="_1tng6ym"></div>
                         <div class="_9t7ktw">
-                          <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                          <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                             <div class="_1q9sh65">How do you want to share?</div>
                           </h1>
                         </div>
@@ -6722,7 +6722,7 @@
                             
                       <div class="_12kfhdn">
                         <section>
-                          <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                          <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
                             <div class="_e0px5r">Send a link to your wishlist</div>
                           </h2>
                           <div class="_1ywltba"><img
@@ -6926,7 +6926,7 @@
                      
                       <div class="_12kfhdn">
                         <section>
-                          <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                          <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
                             <div class="_e0px5r">Invite others to join</div>
                           </h2>
                           <div class="_1ywltba"><img
@@ -7242,7 +7242,7 @@
                       <header class="_1c8aprq">
                         <div class="_1tng6ym"></div>
                         <div class="_9t7ktw">
-                          <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                          <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                             <div class="_1q9sh65">Delete this wishlist</div>
                           </h1>
                         </div>
@@ -7319,7 +7319,7 @@
                                         <div class="_ytfarf" data-visible="false" style="padding: 0px 13px;">
                                           <div class="_ihvjx2">
                                             <section>
-                                              <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">October 2022</h2>
+                                              <h2 tabindex="-1" class="heading" elementtiming="LCP-target">October 2022</h2>
                                             </section>
                                           </div>
                                           <table class="_cvkwaj" role="presentation" style="border-spacing: 0px 2px;">
@@ -7541,7 +7541,7 @@
                                         <div class="_ytfarf" data-visible="true" style="padding: 0px 13px;">
                                           <div class="_ihvjx2">
                                             <section>
-                                              <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">November 2022</h2>
+                                              <h2 tabindex="-1" class="heading" elementtiming="LCP-target">November 2022</h2>
                                             </section>
                                           </div>
                                           <table class="_cvkwaj" role="presentation" style="border-spacing: 0px 2px;">
@@ -7755,7 +7755,7 @@
                                         <div class="_ytfarf" data-visible="false" style="padding: 0px 13px;">
                                           <div class="_ihvjx2">
                                             <section>
-                                              <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">December 2022</h2>
+                                              <h2 tabindex="-1" class="heading" elementtiming="LCP-target">December 2022</h2>
                                             </section>
                                           </div>
                                           <table class="_cvkwaj" role="presentation" style="border-spacing: 0px 2px;">
@@ -8145,7 +8145,7 @@
               <header class="_1youxq0">
                 <div class="_1tng6ym"></div>
                 <div class="_9t7ktw">
-                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                  <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                     <div class="_1q9sh65">Oct 31 – Oct 31</div>
                   </h1>
                 </div>
@@ -8197,7 +8197,7 @@
                               <div class="_ytfarf" data-visible="false" style="padding: 0px 13px;">
                                 <div class="_ihvjx2">
                                   <section>
-                                    <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">September 2022</h2>
+                                    <h2 tabindex="-1" class="heading" elementtiming="LCP-target">September 2022</h2>
                                   </section>
                                 </div>
                                 <table class="_cvkwaj" role="presentation" style="border-spacing: 0px 2px;">
@@ -8405,7 +8405,7 @@
                               <div class="_ytfarf" data-visible="true" style="padding: 0px 13px;">
                                 <div class="_ihvjx2">
                                   <section>
-                                    <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">October 2022</h2>
+                                    <h2 tabindex="-1" class="heading" elementtiming="LCP-target">October 2022</h2>
                                   </section>
                                 </div>
                                 <table class="_cvkwaj" role="presentation" style="border-spacing: 0px 2px;">
@@ -8626,7 +8626,7 @@
                               <div class="_ytfarf" data-visible="false" style="padding: 0px 13px;">
                                 <div class="_ihvjx2">
                                   <section>
-                                    <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">November 2022</h2>
+                                    <h2 tabindex="-1" class="heading" elementtiming="LCP-target">November 2022</h2>
                                   </section>
                                 </div>
                                 <table class="_cvkwaj" role="presentation" style="border-spacing: 0px 2px;">
@@ -8936,7 +8936,7 @@
               <header class="_1c8aprq">
                 <div class="_1tng6ym"></div>
                 <div class="_9t7ktw">
-                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                  <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                     <div class="_1q9sh65">Guests</div>
                   </h1>
                 </div>
@@ -9103,7 +9103,7 @@
                               <div class="_ytfarf" data-visible="false" style="padding: 0px 13px;">
                                 <div class="_ihvjx2">
                                   <section>
-                                    <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">September 2022</h2>
+                                    <h2 tabindex="-1" class="heading" elementtiming="LCP-target">September 2022</h2>
                                   </section>
                                 </div>
                                 <table class="_cvkwaj" role="presentation" style="border-spacing: 0px 2px;">
@@ -9311,7 +9311,7 @@
                               <div class="_ytfarf" data-visible="true" style="padding: 0px 13px;">
                                 <div class="_ihvjx2">
                                   <section>
-                                    <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">October 2022</h2>
+                                    <h2 tabindex="-1" class="heading" elementtiming="LCP-target">October 2022</h2>
                                   </section>
                                 </div>
                                 <table class="_cvkwaj" role="presentation" style="border-spacing: 0px 2px;">
@@ -9533,7 +9533,7 @@
                               <div class="_ytfarf" data-visible="false" style="padding: 0px 13px;">
                                 <div class="_ihvjx2">
                                   <section>
-                                    <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">November 2022</h2>
+                                    <h2 tabindex="-1" class="heading" elementtiming="LCP-target">November 2022</h2>
                                   </section>
                                 </div>
                                 <table class="_cvkwaj" role="presentation" style="border-spacing: 0px 2px;">
