--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1284,7 +1284,7 @@
                                               style="padding-top: 24px; padding-bottom: 24px;">
                                               <section>
                                                 <div class="tu9uqg8 dir dir-ltr">
-                                                  <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Required for your trip</h2>
+                                                  <h2 tabindex="-1" class="heading" elementtiming="LCP-target">Required for your trip</h2>
                                                 </div>
                                               </section>
                                             </div>
@@ -4725,7 +4725,7 @@
                                                 style="padding-top: 32px; padding-bottom: 24px;">
                                                 <section>
                                                   <div class="tu9uqg8 dir dir-ltr">
-                                                    <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Required for your trip</h2>
+                                                    <h2 tabindex="-1" class="heading" elementtiming="LCP-target">Required for your trip</h2>
                                                   </div>
                                                 </section>
                                               </div>
@@ -10662,14 +10662,14 @@
 <section>
   <div class="_v1m4jk">
     <div class="_rjfnlo">
-      <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+      <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
         Cancellation policy
       </h2>
     </div>
   </div>
   <div>
     <div class="_o26o64">
-      <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+      <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
         Cancel by
       </h3>
     </div>
@@ -10920,7 +10920,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                 <header class="_1youxq0">
                   <div class="_1tng6ym"></div>
                   <div class="_9t7ktw">
-                    <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                    <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                       <div class="_1q9sh65">Message the Host</div>
                     </h1>
                   </div>
@@ -10992,7 +10992,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                 <header class="_1youxq0">
                   <div class="_1tng6ym"></div>
                   <div class="_9t7ktw">
-                    <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                    <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                       <div class="_1q9sh65">Add your profile photo</div>
                     </h1>
                   </div>
@@ -11055,7 +11055,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                 <header class="_1youxq0">
                   <div class="_1tng6ym"></div>
                   <div class="_9t7ktw">
-                    <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                    <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                       <div class="_1q9sh65">Add phone number</div>
                     </h1>
                   </div>
