--- a/payments/service-fee.html
+++ b/payments/service-fee.html
@@ -304,7 +304,7 @@
 
 <div class="_jtezirx">
   <div class="_wrz7pg">
-    <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+    <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
       Service fee settings
     </h1>
   </div>
@@ -799,7 +799,7 @@
                                               <div class="_wrz7pg">
                                                 <h2
                                                   tabindex="-1"
-                                                  class="_14i3z6h"
+                                                  class="heading"
                                                   elementtiming="LCP-target"
                                                 >
                                                   Service fee settings
