--- a/submission/photo-upload.html
+++ b/submission/photo-upload.html
@@ -1047,7 +1047,7 @@
                             <section>
                               <div class="_v08k6k">
                                <section>
-                                <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><span class="_kedp3u">Provide a variety of details and angles, including photos of people in action.</span></h2>
+                                <h2 tabindex="-1" class="heading" elementtiming="LCP-target"><span class="_kedp3u">Provide a variety of details and angles, including photos of people in action.</span></h2>
                                 <div class="_1dnt01i">
                                  <div class="_b328lf" role="img" tabindex="0" aria-label="Photo collage  with a variety of details and angles">
                                   <div class="_13ucou1">
@@ -1195,7 +1195,7 @@
                                  </div>
                                 </div>
                                 <div class="_13red39">
-                                 <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><span class="_kedp3u">Show candid moments that accurately illustrate your experience.</span></h2>
+                                 <h2 tabindex="-1" class="heading" elementtiming="LCP-target"><span class="_kedp3u">Show candid moments that accurately illustrate your experience.</span></h2>
                                  <div class="_1dnt01i">
                                   <div class="_b328lf" role="img" tabindex="0" aria-label="Photo of a candid moment">
                                    <div class="_v0gz4uz" role="img" aria-busy="false" aria-label="Photo of a candid moment" style="border-radius: 12px; --dls-liteimage-padding-top: 133.333%;">
