--- a/submission/review.html
+++ b/submission/review.html
@@ -1483,7 +1483,7 @@
             <div class="_1ph2xfp">
              <div class="_w99wiq">
               <section>
-               <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><span class="_gca4re">Local laws</span></h2>
+               <h2 tabindex="-1" class="heading" elementtiming="LCP-target"><span class="_gca4re">Local laws</span></h2>
                <div class="_g86r3e">
                 <p class="_1mm0shk">
                  Learn about <a href="/help/topic/896/responsible-hosting-for-airbnb-experiences" target="_blank"><span class="_1dsb80r">responsible hosting for Airbnb Experiences</span></a>.
@@ -1539,7 +1539,7 @@
             <div class="_1ph2xfp">
              <div class="_w99wiq">
               <section>
-               <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><span class="_gca4re">Tour guiding</span></h2>
+               <h2 tabindex="-1" class="heading" elementtiming="LCP-target"><span class="_gca4re">Tour guiding</span></h2>
                <div class="_g86r3e">
                 <p class="_1mm0shk">
                  Learn about <a href="/help/article/2255/tour-guiding-and-travelrelated-experiences" target="_blank"><span class="_1dsb80r">tour guiding and travel-related experiences</span></a>.
@@ -1598,7 +1598,7 @@
             <div class="_1ph2xfp">
              <div class="_w99wiq">
               <section>
-               <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><span class="_gca4re">Animals</span></h2>
+               <h2 tabindex="-1" class="heading" elementtiming="LCP-target"><span class="_gca4re">Animals</span></h2>
                <div class="_g86r3e">
                 <p class="_1mm0shk">
                  Experiences must follow all animal safety and <a href="/help/article/2578/what-are-the-animal-welfare-guidelines-for-airbnb-experiences" target="_blank"><span class="_1dsb80r">animal welfare guidelines</span></a>.
