--- a/submission/title.html
+++ b/submission/title.html
@@ -1227,7 +1227,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                <header class="_1b0cy6g">
                 <div class="_1tng6ym"></div>
                 <div class="_9t7ktw">
-                 <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><div class="_1q9sh65">Examples</div></h1>
+                 <h1 tabindex="-1" class="heading" elementtiming="LCP-target"><div class="_1q9sh65">Examples</div></h1>
                 </div>
                 <div class="_rrmdgl"></div>
                </header>
