--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1504,7 +1504,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             <header class="_q8mwh4">
              <div class="_1jqox1a"></div>
              <div class="_1s09xaf">
-              <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+              <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                <div class="_1q9sh65">
                 <div style="--gp-section-max-width: 1120px;">
                  <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_MODAL_HEADER" data-section-id="CONCEPT_REFINEMENT_0_MODAL_HEADER">
@@ -3835,7 +3835,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             <header class="_q8mwh4">
              <div class="_1jqox1a"></div>
              <div class="_1s09xaf">
-              <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+              <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                <div class="_1q9sh65">
                 <div style="--gp-section-max-width: 1120px;">
                  <div data-plugin-in-point-id="EXAMPLES_MODAL_HEADER" data-section-id="EXAMPLES_MODAL_HEADER">
