--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -352,7 +352,7 @@
                                                   >
                                                     <h2
                                                       tabindex="-1"
-                                                      class="_14i3z6h"
+                                                      class="heading"
                                                       elementtiming="LCP-target"
                                                     >
                                                       Message the host
