--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -2959,7 +2959,7 @@
                                                     d="m29.386 28.48c-0.1326-0.4014-0.3184-0.8036-0.4779-1.1781-0.239-0.5628-0.5042-1.1248-0.7432-1.6606l-0.0262-0.0532c-2.2294-4.8475-4.5922-9.7761-7.0868-14.624l-0.1064-0.2146c-0.2652-0.5088-0.5042-1.0176-0.7702-1.5001-0.3183-0.58904-0.6637-1.2051-1.1417-1.7942-1.0615-1.2592-2.5216-1.9285-4.1143-1.9285-1.5926 0-3.0527 0.69636-4.1142 1.9285-0.478 0.58905-0.84958 1.2051-1.1418 1.7942-0.26518 0.50876-0.53115 1.0175-0.79633 1.5263l-0.1064 0.2146c-2.4684 4.8475-4.8574 9.7491-7.0599 14.624l-0.0262 0.0803c-0.23898 0.5358-0.50416 1.0978-0.74314 1.6336-0.15958 0.3752-0.31838 0.7496-0.47796 1.1781-0.42477 1.2051-0.55736 2.3299-0.37157 3.4818 0.34537 2.4102 1.938 4.4731 4.1675 5.3833 0.82254 0.3481 1.6991 0.5087 2.628 0.5087 0.29218 0 0.55736-0.027 0.84953-0.0532 1.0885-0.1336 2.15-0.4818 3.2115-1.0978 1.3005-0.7497 2.5748-1.8212 3.9817-3.3745 1.4069 1.5533 2.6812 2.6248 3.9817 3.3745 1.0615 0.616 2.1501 0.9642 3.2116 1.0978 0.2922 0.027 0.5573 0.0532 0.8495 0.0532 0.9027 0 1.7785-0.1606 2.628-0.5087 2.2294-0.911 3.8221-2.9731 4.1675-5.3833 0.158-1.1781 0.0516-2.3029-0.3724-3.5081zm-14.467 1.7942c-1.7522-2.2226-2.8669-4.3117-3.2647-6.0526-0.1596-0.7234-0.212-1.3927-0.1064-1.9818 0.0794-0.5087 0.2652-0.9642 0.5312-1.3657 0.6105-0.8839 1.672-1.4197 2.8399-1.4197s2.2565 0.5358 2.84 1.4197c0.2652 0.4015 0.451 0.857 0.5312 1.3657 0.0794 0.5891 0.0532 1.2592-0.1064 1.9818-0.3978 1.7409-1.5395 3.83-3.2648 6.0526zm12.874 1.5263c-0.2389 1.6876-1.3536 3.1336-2.9463 3.7767-0.7702 0.3212-1.6189 0.4285-2.4684 0.3211-0.8226-0.1073-1.6189-0.3752-2.4685-0.8569-1.1679-0.6693-2.3358-1.6606-3.6633-3.1606 2.0969-2.6249 3.4244-5.0351 3.9023-7.2045 0.212-0.9913 0.2652-1.9285 0.1326-2.7584s-0.4247-1.5804-0.8495-2.2227c-0.9821-1.446-2.6812-2.3037-4.5391-2.3037-1.8578 0-3.5569 0.857-4.539 2.3037-0.45098 0.6431-0.71696 1.3928-0.84955 2.2227-0.13259 0.8569-0.07939 1.7941 0.13259 2.7584 0.47796 2.1694 1.8047 4.5796 3.9023 7.2045-1.3275 1.473-2.4954 2.4905-3.6633 3.1606-0.84953 0.4817-1.6459 0.7496-2.4684 0.8569-0.84953 0.1074-1.6991 1e-4 -2.4684-0.3211-1.5657-0.6431-2.7074-2.0891-2.9464-3.7767-0.10639-0.8299-0.0262-1.6336 0.29217-2.5176 0.10639-0.3211 0.23898-0.6431 0.42477-1.0175 0.23898-0.5358 0.47796-1.0978 0.71694-1.6066l0.0262-0.0802c2.2564-4.8746 4.6454-9.7761 7.1139-14.624l0.1064-0.1876c0.2651-0.4818 0.5041-1.0175 0.7701-1.5001 0.2652-0.50873 0.5574-1.0175 0.9027-1.446 0.6638-0.80368 1.5657-1.2051 2.5748-1.2051 1.0084 0 1.8849 0.42847 2.5748 1.2051 0.3716 0.42846 0.6368 0.91019 0.9028 1.446 0.2651 0.4818 0.5311 0.9913 0.7701 1.473l0.1064 0.2147c2.4684 4.8475 4.8312 9.749 7.0606 14.624l0.0262 0.0532c0.239 0.5358 0.5042 1.0978 0.7432 1.6336 0.1596 0.3752 0.2922 0.6964 0.4248 1.0175 0.2897 0.884 0.3691 1.6877 0.2635 2.5176z">
                                                   </path>
                                                 </svg></div>
-                                              <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                              <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                 <div class="_15thk4s">Extraordinary homes with five-star everything
                                                 </div>
                                               </h2>
@@ -5219,7 +5219,7 @@
                                                       <div class="_tpcbtl">
                                                         <div>
                                                           <div class="_9ns6hl">
-                                                            <h3 tabindex="-1" class="_14i3z6h"
+                                                            <h3 tabindex="-1" class="heading"
                                                               elementtiming="LCP-target">
                                                               Airport</h3>
                                                           </div>
@@ -5244,7 +5244,7 @@
                                                         <div class="_tpcbtl">
                                                           <div>
                                                             <div class="_9ns6hl">
-                                                              <h3 tabindex="-1" class="_14i3z6h"
+                                                              <h3 tabindex="-1" class="heading"
                                                                 elementtiming="LCP-target">Points of Interest</h3>
                                                             </div>
                                                             <div class="_dc0jge">
@@ -12584,7 +12584,7 @@
                                                   d="m29.386 28.48c-0.1326-0.4014-0.3184-0.8036-0.4779-1.1781-0.239-0.5628-0.5042-1.1248-0.7432-1.6606l-0.0262-0.0532c-2.2294-4.8475-4.5922-9.7761-7.0868-14.624l-0.1064-0.2146c-0.2652-0.5088-0.5042-1.0176-0.7702-1.5001-0.3183-0.58904-0.6637-1.2051-1.1417-1.7942-1.0615-1.2592-2.5216-1.9285-4.1143-1.9285-1.5926 0-3.0527 0.69636-4.1142 1.9285-0.478 0.58905-0.84958 1.2051-1.1418 1.7942-0.26518 0.50876-0.53115 1.0175-0.79633 1.5263l-0.1064 0.2146c-2.4684 4.8475-4.8574 9.7491-7.0599 14.624l-0.0262 0.0803c-0.23898 0.5358-0.50416 1.0978-0.74314 1.6336-0.15958 0.3752-0.31838 0.7496-0.47796 1.1781-0.42477 1.2051-0.55736 2.3299-0.37157 3.4818 0.34537 2.4102 1.938 4.4731 4.1675 5.3833 0.82254 0.3481 1.6991 0.5087 2.628 0.5087 0.29218 0 0.55736-0.027 0.84953-0.0532 1.0885-0.1336 2.15-0.4818 3.2115-1.0978 1.3005-0.7497 2.5748-1.8212 3.9817-3.3745 1.4069 1.5533 2.6812 2.6248 3.9817 3.3745 1.0615 0.616 2.1501 0.9642 3.2116 1.0978 0.2922 0.027 0.5573 0.0532 0.8495 0.0532 0.9027 0 1.7785-0.1606 2.628-0.5087 2.2294-0.911 3.8221-2.9731 4.1675-5.3833 0.158-1.1781 0.0516-2.3029-0.3724-3.5081zm-14.467 1.7942c-1.7522-2.2226-2.8669-4.3117-3.2647-6.0526-0.1596-0.7234-0.212-1.3927-0.1064-1.9818 0.0794-0.5087 0.2652-0.9642 0.5312-1.3657 0.6105-0.8839 1.672-1.4197 2.8399-1.4197s2.2565 0.5358 2.84 1.4197c0.2652 0.4015 0.451 0.857 0.5312 1.3657 0.0794 0.5891 0.0532 1.2592-0.1064 1.9818-0.3978 1.7409-1.5395 3.83-3.2648 6.0526zm12.874 1.5263c-0.2389 1.6876-1.3536 3.1336-2.9463 3.7767-0.7702 0.3212-1.6189 0.4285-2.4684 0.3211-0.8226-0.1073-1.6189-0.3752-2.4685-0.8569-1.1679-0.6693-2.3358-1.6606-3.6633-3.1606 2.0969-2.6249 3.4244-5.0351 3.9023-7.2045 0.212-0.9913 0.2652-1.9285 0.1326-2.7584s-0.4247-1.5804-0.8495-2.2227c-0.9821-1.446-2.6812-2.3037-4.5391-2.3037-1.8578 0-3.5569 0.857-4.539 2.3037-0.45098 0.6431-0.71696 1.3928-0.84955 2.2227-0.13259 0.8569-0.07939 1.7941 0.13259 2.7584 0.47796 2.1694 1.8047 4.5796 3.9023 7.2045-1.3275 1.473-2.4954 2.4905-3.6633 3.1606-0.84953 0.4817-1.6459 0.7496-2.4684 0.8569-0.84953 0.1074-1.6991 1e-4 -2.4684-0.3211-1.5657-0.6431-2.7074-2.0891-2.9464-3.7767-0.10639-0.8299-0.0262-1.6336 0.29217-2.5176 0.10639-0.3211 0.23898-0.6431 0.42477-1.0175 0.23898-0.5358 0.47796-1.0978 0.71694-1.6066l0.0262-0.0802c2.2564-4.8746 4.6454-9.7761 7.1139-14.624l0.1064-0.1876c0.2651-0.4818 0.5041-1.0175 0.7701-1.5001 0.2652-0.50873 0.5574-1.0175 0.9027-1.446 0.6638-0.80368 1.5657-1.2051 2.5748-1.2051 1.0084 0 1.8849 0.42847 2.5748 1.2051 0.3716 0.42846 0.6368 0.91019 0.9028 1.446 0.2651 0.4818 0.5311 0.9913 0.7701 1.473l0.1064 0.2147c2.4684 4.8475 4.8312 9.749 7.0606 14.624l0.0262 0.0532c0.239 0.5358 0.5042 1.0978 0.7432 1.6336 0.1596 0.3752 0.2922 0.6964 0.4248 1.0175 0.2897 0.884 0.3691 1.6877 0.2635 2.5176z">
                                                 </path>
                                               </svg></div>
-                                            <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                            <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
                                               <div class="_15thk4s">Extraordinary homes with five-star everything
                                               </div>
                                             </h2>
@@ -15195,7 +15195,7 @@
                                                     <div class="_tpcbtl">
                                                       <div>
                                                         <div class="_9ns6hl">
-                                                          <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                          <h3 tabindex="-1" class="heading" elementtiming="LCP-target">
                                                             Airport</h3>
                                                         </div>
                                                         <div class="_dc0jge">
@@ -15219,7 +15219,7 @@
                                                       <div class="_tpcbtl">
                                                         <div>
                                                           <div class="_9ns6hl">
-                                                            <h3 tabindex="-1" class="_14i3z6h"
+                                                            <h3 tabindex="-1" class="heading"
                                                               elementtiming="LCP-target">Points of Interest</h3>
                                                           </div>
                                                           <div class="_dc0jge">
@@ -24324,7 +24324,7 @@
                       <div style="display: contents; --dls19-brand-color: var(--f-k-smk-x);">
                         <section>
                           <div class="_1kb5zmd">
-                            <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Questions about this home?
+                            <h2 tabindex="-1" class="heading" elementtiming="LCP-target">Questions about this home?
                             </h2>
                           </div>
                           <div class="_1vkmpb5">
