--- a/online-experience/dashboard.html
+++ b/online-experience/dashboard.html
@@ -1401,7 +1401,7 @@
            <header class="_1youxq0">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
-             <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><div class="_1q9sh65">Tasks</div></h1>
+             <h1 tabindex="-1" class="heading" elementtiming="LCP-target"><div class="_1q9sh65">Tasks</div></h1>
             </div>
             <div class="_rrmdgl"></div>
            </header>
