--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -3753,7 +3753,7 @@
            <header class="_1c8aprq">
             <div class="_1tng6ym"></div>
             <div class="_9t7ktw">
-             <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+             <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
               <div class="_1q9sh65"><div class="_2w4rf6" id="date-range-popover-heading">Date range</div></div>
              </h1>
             </div>
@@ -3824,7 +3824,7 @@
                  <header class="_1youxq0">
                   <div class="_1tng6ym"></div>
                   <div class="_9t7ktw">
-                   <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><div class="_1q9sh65">Price or value</div></h1>
+                   <h1 tabindex="-1" class="heading" elementtiming="LCP-target"><div class="_1q9sh65">Price or value</div></h1>
                   </div>
                   <div class="_rrmdgl"></div>
                  </header>
@@ -3893,7 +3893,7 @@
                  <header class="_1youxq0">
                   <div class="_1tng6ym"></div>
                   <div class="_9t7ktw">
-                   <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><div class="_1q9sh65">Price was lower elsewhere</div></h1>
+                   <h1 tabindex="-1" class="heading" elementtiming="LCP-target"><div class="_1q9sh65">Price was lower elsewhere</div></h1>
                   </div>
                   <div class="_rrmdgl"></div>
                  </header>
